<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mifare Utility</string>
    <string name="menu_settings">Configuración</string>
    <string name="warning_nfc_is_off">NFC está actualmente desactivado!</string>
    <string name="turn_on_nfc">La aplicación no puede correr si NFC está deshabilitado. Por favor activar NFC en Settings y luego utilice el botón back para regresar a esta app.</string>
    <string name="instrucciones"> Acercar el dispositivo Android a un tag Mifare para leer su UID y tipo.</string>
    <string name="tag_UID">" UID del Tag: "</string>
    <string name="card_type">" Tipo de Tarjeta: "</string>
    <string name="autenticate_label">  AUTENTIFICACIÓN:</string>
    <string name="keyA_label">" Key A (Hex): "</string>
    <string name="keyB_label">" Key B (Hex): "</string>
    <string name="sectorauth_label">" Sector a autentificar: "</string>
    <string name="sel_llave_label">" Seleccionar llave: "</string>
    <string name="keyA">Key A</string>
    <string name="keyB">Key B</string>
    <string name="authenticatebutton">Autentificar Sector</string>
    <string name="select_block_label">" Introducir bloque: "</string>
    <string name="leer_bloque_button">Leer Bloque</string>
    <string name="escribir_bloque_button">Escribir Bloque</string>
    <string name="ready_to_authenticate">Listo para autentificar un sector del tag Mifare!</string>
    <string name="ready_to_authenticate_instructions">Acerque su dispositivo Android a un tag Mifare para autentificar el sector seleccionado con la llave seleccionada.</string>
    <string name="ready_to_write">Listo para escribir a un bloque del tag Mifare!</string>
    <string name="ready_to_write_instructions">Acerque su dispositivo Android a un tag Mifare para escribir al bloque seleccionado con la información introducida.</string>
    <string name="ready_to_read">Listo para leer un bloque del tag Mifare!</string>
    <string name="ready_to_read_instructions">Acerque su dispositivo Android a un tag Mifare para leer la información del bloque seleccionado.</string>
    <string name="menu_about">Acerca de Mifare Control</string>
    <string name="menu_help">Ayuda</string>
    <string name="keyALabel">Introduzca la clave A</string>
    <string name="selectKeyLabel">Seleccione una llave para efectuar la operación</string>
    <string name="hex_string">"123456789ABCDEF"</string>

</resources>
